--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/style.css">
 
-
-  <script type="text/javascript" src="js/background.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>  <script type="text/javascript" src="js/background.js"></script>
   <script type="text/javascript" src="js/player.js"></script>
   <script type="text/javascript" src="js/obstacle.js"></script>
-  <script type="text/javascript" src="js/trees.js"></script>  
-  <script type="text/javascript" src="js/lane.js"></script>    
+  <script type="text/javascript" src="js/trees.js"></script>
+  <script type="text/javascript" src="js/lane.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
   <title>Document</title>
 </head>
 
 <body>
-<!--   <img src="./img/logo.png" alt="" style="width:50%">
+  <!--   <img src="./img/logo.png" alt="" style="width:50%">
   <br> -->
-  <button id="start-button">StartGame</button>
+  <button id="jump">Normal mode</button>
+  <button id="cars">Cars mode</button>
   <div id="game-board">
     <canvas id="canvas" height="750px" width="1300px"></canvas>
   </div>
