--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <script type="text/javascript" src="js/player.js"></script>
   <script type="text/javascript" src="js/obstacle.js"></script>
   <script type="text/javascript" src="js/trees.js"></script>
-  <script type="text/javascript" src="js/lane.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
   <title>Document</title>
@@ -24,9 +23,8 @@
   <!--   <img src="./img/logo.png" alt="" style="width:50%">
   <br> -->
   <button id="jump">Normal mode</button>
-  <button id="cars">Cars mode</button>
   <div id="game-board">
-    <canvas id="canvas" height="750px" width="1300px"></canvas>
+    <canvas id="canvas" height="750px" width="1300px" class="hidden"></canvas>
   </div>
 </body>
 
