--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>  <script type="text/javascript" src="js/background.js"></script>
+  crossorigin="anonymous"></script>
+  <script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script></head>
+  <script type="text/javascript" src="js/background.js"></script>
   <script type="text/javascript" src="js/player.js"></script>
   <script type="text/javascript" src="js/obstacle.js"></script>
   <script type="text/javascript" src="js/trees.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
+  <script type="text/javascript" src="js/sounds.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
-  <title>Document</title>
+  <title>Chicken smash</title>
 </head>
 
 <body>
