--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/style.css">
-
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  src="https://code.jquery.com/jquery-2.2.4.min.js"
+  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous"></script>
-  <script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script></head>
+  <script
+  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+  crossorigin="anonymous"></script>
+  <!-- <script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script></head> -->
   <script type="text/javascript" src="js/background.js"></script>
   <script type="text/javascript" src="js/player.js"></script>
   <script type="text/javascript" src="js/obstacle.js"></script>
@@ -25,7 +29,11 @@
 <body>
   <!--   <img src="./img/logo.png" alt="" style="width:50%">
   <br> -->
-  <button id="jump">Normal mode</button>
+<!--   <button id="jump">Normal mode</button> -->
+
+    <div id="cosas" class="container">
+      <img src="./img/chickenCrash.png">
+    </div>
   <div id="game-board">
     <canvas id="canvas" height="750px" width="1300px" class="hidden"></canvas>
   </div>
